Replace external map with inline SVG Turkey outline

--- a/resume.html
+++ b/resume.html
@@ -1310,12 +1310,12 @@
                         <div class="contact-item"><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/silvestr-liskin-ab712920b/">silvestr-liskin</a></div>
                         <div class="contact-item"><i class="fab fa-github"></i> <a href="https://github.com/SilvestrLiskin">SilvestrLiskin</a></div>
                         
-                        <div class="map-container" style="background: linear-gradient(135deg, #1a2a2a 0%, #0a1515 100%);">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/d/dd/Turkey_location_map.svg" 
-                                 alt="Turkey Map" 
-                                 style="width:100%; height:100%; object-fit:cover; opacity:0.4; filter:grayscale(100%) brightness(0.6);">
-                            <div class="map-pin" style="top:28%; left:22%"></div>
-                            <div class="map-label" style="top:18%; left:28%">${d.map_label}</div>
+                        <div class="map-container">
+                            <svg viewBox="0 0 100 45" style="width:100%; height:100%; opacity:0.35;">
+                                <path fill="#4a9" d="M2,22 L3,20 L5,18 L4,16 L6,14 L5,12 L7,11 L9,12 L11,10 L10,8 L12,7 L14,8 L16,6 L18,7 L20,5 L22,6 L24,5 L26,6 L28,5 L30,6 L32,5 L34,7 L36,6 L38,8 L40,7 L42,9 L44,8 L46,10 L48,9 L50,11 L52,10 L54,12 L56,11 L58,13 L60,12 L62,14 L64,13 L66,15 L68,14 L70,16 L72,15 L74,17 L76,18 L78,20 L80,22 L82,24 L84,26 L86,28 L88,30 L90,32 L92,30 L94,28 L96,30 L98,32 L96,34 L94,36 L92,34 L90,36 L88,34 L86,36 L84,34 L82,36 L80,34 L78,36 L76,34 L74,36 L72,34 L70,36 L68,34 L66,36 L64,34 L62,36 L60,34 L58,36 L56,34 L54,36 L52,34 L50,36 L48,34 L46,36 L44,34 L42,36 L40,34 L38,35 L36,33 L34,35 L32,33 L30,35 L28,33 L26,34 L24,32 L22,33 L20,31 L18,32 L16,30 L14,31 L12,29 L10,30 L8,28 L6,29 L4,27 L3,25 L2,24 Z"/>
+                            </svg>
+                            <div class="map-pin" style="top:35%; left:15%"></div>
+                            <div class="map-label" style="top:22%; left:20%">${d.map_label}</div>
                         </div>
                     </div>
 
